correct query results display on mobile devices

--- a/src/components/query-results/index.module.css
+++ b/src/components/query-results/index.module.css
@@ -13,3 +13,11 @@
   border-radius: 4px;
   border: 1px solid #ebebeb;
 }
+
+/* Mobile */
+@media (max-width: 700px) {
+  .queryResults img {
+    width: 114px;
+    height: 114px;
+  }
+}
